--- a/interactions/templates/interactions/dashboard.html
+++ b/interactions/templates/interactions/dashboard.html
@@ -56,7 +56,11 @@
                                 <div class="accordion-body">
                                     <ul class="list-group">
                                         {% for favourite in favourite_subsections %}
-                                        <li class="list-group-item"><a href="{{ favourite.subsection.get_absolute_url }}">{{ favourite.subsection.title }}</a></li>
+                                        <li class="list-group-item">
+                                            <a href="{{ favourite.subsection.get_absolute_url }}">
+                                            {{ favourite.subsection.title }}
+                                            </a>
+                                        </li>
                                         {% endfor %}
                                     </ul>
                                 </div>
