--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -22,15 +22,7 @@
 
 <main class="content">
     <div class="container mt-5">
-        <h1>{{ section.title }}
-            <a href="{% url 'add_favourite' 'section' section.id %}" class="favourite-icon">
-            {% if section.id in favourite_sections %}
-                <i class="fas fa-star"></i>
-            {% else %}
-                <i class="far fa-star"></i>
-            {% endif %}
-            </a>
-        </h1>
+        <h1>{{ section.title }}</h1>
         <div class="section-description mb-4">
             {{ section.description|safe }}
         </div>
@@ -40,6 +32,13 @@
                     <h2 class="accordion-header" id="heading-{{ subsection.id }}">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{ subsection.id }}" aria-expanded="false" aria-controls="collapse-{{ subsection.id }}">
                             {{ subsection.title }}
+                            <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="favourite-icon">
+                                {% if subsection.id in favourite_subsections %}
+                                    <i class="fas fa-star"></i>
+                                {% else %}
+                                    <i class="far fa-star"></i>
+                                {% endif %}
+                            </a>
                         </button>
                     </h2>
                     <div id="collapse-{{ subsection.id }}" class="accordion-collapse collapse" aria-labelledby="heading-{{ subsection.id }}" data-bs-parent="#accordionExample">
@@ -54,6 +53,13 @@
                                             <h3 class="accordion-header" id="nestedHeading-{{ subsubsection.id }}">
                                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nestedCollapse-{{ subsubsection.id }}" aria-expanded="false" aria-controls="nestedCollapse-{{ subsubsection.id }}">
                                                     {{ subsubsection.title }}
+                                                    <a href="{% url 'add_favourite' 'subsection' subsubsection.id %}" class="favourite-icon">
+                                                        {% if subsubsection.id in favourite_subsections %}
+                                                            <i class="fas fa-star"></i>
+                                                        {% else %}
+                                                            <i class="far fa-star"></i>
+                                                        {% endif %}
+                                                    </a>
                                                 </button>
                                             </h3>
                                             <div id="nestedCollapse-{{ subsubsection.id }}" class="accordion-collapse collapse" aria-labelledby="nestedHeading{{ subsubsection.id }}" data-bs-parent="#nestedAccordion-{{ subsection.id }}">
