--- a/templates/account/email_confirmation_sent.html
+++ b/templates/account/email_confirmation_sent.html
@@ -3,8 +3,8 @@
 {% block title %}Verify Your Email Address{% endblock %}
 
 {% block content %}
-<div class="container mt-3">
-    <h2>E-mail Adresse bestätigen</h2>
+<div class="auth-form-container mt-3">
+    <h1>E-mail Adresse bestätigen</h1>
     <p>Wir haben Ihnen eine E-Mail zur Überprüfung geschickt. Folgen Sie dem angegebenen Link, um den Anmeldevorgang abzuschließen.</p>
     <p>Wenn Sie die Bestätigungs-E-Mail nicht in Ihrem Posteingang sehen, überprüfen Sie Ihren Spam-Ordner.</p>
     <p>Wenn Sie die Bestätigungs-E-Mail nicht innerhalb der nächsten 15 Minuten erhalten, rufen Sie uns bitte an +49 175 4790220</p>
