--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -21,7 +21,7 @@
 </nav>
 
 <main class="content">
-    <div class="container mt-5">
+    <div class="container mt-2">
         <h1>{{ section.title }}</h1>
         <div class="section-description mb-4">
             {{ section.description|safe }}
@@ -32,13 +32,19 @@
                     <h2 class="accordion-header" id="heading-{{ subsection.id }}">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{ subsection.id }}" aria-expanded="false" aria-controls="collapse-{{ subsection.id }}">
                             {{ subsection.title }}
-                            <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="favourite-icon">
-                                {% if subsection.id in favourite_subsections %}
-                                    <i class="fas fa-star"></i>
-                                {% else %}
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'add_favourite' 'subsection' subsection.id %}" class="favourite-icon">
+                                    {% if subsection.id in favourite_subsections %}
+                                        <i class="fas fa-star"></i>
+                                    {% else %}
+                                        <i class="far fa-star"></i>
+                                    {% endif %}
+                                </a>
+                            {% else %}
+                                <a href="{% url 'account_login' %}?next={% url 'add_favourite' 'subsection' subsection.id %}" class="favourite-icon">
                                     <i class="far fa-star"></i>
-                                {% endif %}
-                            </a>
+                                </a>
+                            {% endif %}
                         </button>
                     </h2>
                     <div id="collapse-{{ subsection.id }}" class="accordion-collapse collapse" aria-labelledby="heading-{{ subsection.id }}" data-bs-parent="#accordionExample">
