--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Anmlden{% endblock %}
 
 {% block content %}
-<div class="container mt-3">
+<div class="auth-form-container mt-3">
     {% if form.errors %}
     <div class="alert alert-danger">
         {{ form.errors }}
     </div>
     {% endif %}
-    <h2>Anmelden</h2>
+    <h1>Anmelden</h1>
     <form method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
