--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -109,8 +109,37 @@ body {
 }
 
 .search-result-item {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--light-gray);
     padding: 15px 0;
+    transition: background-color 0.3s;
+}
+
+.search-result-item:hover {
+    background-color: var(--lightest-gray); /* Add a slight background change on hover */
+}
+
+.search-result-link {
+    font-weight: bold;
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s;
+}
+
+.search-result-link:hover {
+    color: var(--highlight-color); /* Change color on hover to indicate interactivity */
+    text-decoration: underline; /* Underline text on hover */
+}
+
+.search-result-item a {
+    font-weight: bold;
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1.1rem;
+}
+
+.search-result-item a:hover {
+    color: var(--highlight-color);
 }
 
 .search-result-item p {
@@ -543,4 +572,79 @@ footer a:hover {
 .text-register:hover {
     color: var(--highlight-color);
     text-decoration: underline;
+}
+
+/* Custom pagination styling */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.pagination .step-links a {
+    color: var(--highlight-color);
+    text-decoration: none;
+    padding: 0.5rem;
+    margin: 0 0.25rem;
+}
+
+.pagination .step-links a:hover {
+    text-decoration: underline;
+}
+
+.pagination .current {
+    padding: 0.5rem;
+    margin: 0 0.25rem;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+/* Responsive design adjustments */
+@media (max-width: 576px) {
+    .container {
+        padding: 0 8px;
+    }
+
+    .navbar-brand img {
+        height: 25px;
+    }
+
+    .navbar-nav .nav-link {
+        padding: 0.25rem 0.5rem;
+    }
+
+    .search-bar {
+        padding: 8px 0;
+    }
+
+    .search-form input[type="search"] {
+        padding: 8px;
+    }
+
+    .card {
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    .content-container,
+    .comment-container {
+        padding: 15px;
+    }
+
+    .pagination .step-links a,
+    .pagination .current {
+        padding: 0.25rem;
+    }
+
+    .section-title {
+        font-size: 1.25rem;
+    }
+
+    .subsection-title {
+        font-size: 1rem;
+    }
+
+    .auth-form-container {
+        padding: 1rem;
+    }
 }
