fix: corrects errors detected in W3 HTML validator

--- a/manual/templates/manual/section_detail_accordion.html
+++ b/manual/templates/manual/section_detail_accordion.html
@@ -20,7 +20,7 @@
 </ol>
 </nav>
 
-<main class="content">
+<section class="content">
     <div class="container mt-2">
         <h1>{{ section.title }}</h1>
         <div class="section-description mb-4">
@@ -85,7 +85,7 @@
             {% endfor %}
         </div>
     </div>
-</main>
+</section>
 
 <section class="comment-container">
     <!-- Comments section !-->
