doc: adds function and class docstrings and ensure compliance with linters for PEP8

--- a/manual/templates/manual/guidelines.html
+++ b/manual/templates/manual/guidelines.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Leitfaden{% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/content_css/guidelines.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/guidelines.css' %}">
 {% endblock %}
 {% block content %}
     <section class="guidelines-content">
