--- a/manual/templates/manual/intro.html
+++ b/manual/templates/manual/intro.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Einleitung{% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/content_css/guidelines.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/guidelines.css' %}">
 {% endblock %}
 {% block content %}
 <section class="guidelines-content">
