--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <title>{% block title %}Zinc-Flake Coatings Manual{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'css/global/styles.css' %}" rel="stylesheet">
     <!-- Other head content... -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,13 +92,13 @@
                     <a href="https://www.doerken.com/de/de/datenschutz" rel="noopener noreferrer"  target="_blank">Datenschutz</a>
                 </p>
                 <div class="social-links">
-                <a href="https://www.youtube.com/channel/UCD6y0sBcVBNV_ovWbpl7QZg" rel="noopener noreferrer" class="social-icon" target="_blank">
+                <a href="https://www.youtube.com/channel/UCD6y0sBcVBNV_ovWbpl7QZg" rel="noopener noreferrer" class="social-icon" target="_blank" aria-label="YouTube">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a href="https://de.linkedin.com/company/doerkencoatings" rel="noopener noreferrer" class="social-icon" target="_blank">
+                <a href="https://de.linkedin.com/company/doerkencoatings" rel="noopener noreferrer" class="social-icon" target="_blank" aria-label="LinkedIn">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="https://www.xing.com/pages/doerken" rel="noopener noreferrer" class="social-icon" target="_blank">
+                <a href="https://www.xing.com/pages/doerken" rel="noopener noreferrer" class="social-icon" target="_blank" aria-label="Xing">
                     <i class="fab fa-xing"></i>
                 </a>
         </div>
